simplebox/rules.v4
# Generated by xtables-save v1.8.2 on Wed Aug 14 20:37:38 2019
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [20:1280]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -j DROP
-A OUTPUT -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp --dport 22 -j ACCEPT
-A OUTPUT -p udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -d 127.0.0.1 -j ACCEPT
-A OUTPUT -j DROP
COMMIT
# Completed on Wed Aug 14 20:37:38 2019
